--- a/emoticons/index.html
+++ b/emoticons/index.html
@@ -10,7 +10,7 @@
 <div id="container">
 
   <!-- Received emoticon goes here -->
-  <img id="received-emoticon" />
+  <img id="received-emoticon" class="placeholder" src="img/placeholder.gif" />
 
   <div id="select-emoticon">
     <!-- Emoticon picker -->
