--- a/emoticons/index.html
+++ b/emoticons/index.html
@@ -16,6 +16,11 @@
     <!-- Emoticon picker -->
   </div>
 
+  <div id="mobile-warning">
+    Note: receiving may not work on your mobile browser due to
+    hardware/firmware limitations of the microphone.
+  </div>
+
 </div>
 
 <script src="../lib/build/sonicnet.js"></script>
