--- a/chat/index.html
+++ b/chat/index.html
@@ -2,6 +2,7 @@
 <head>
 <link rel="stylesheet" href="style.css"/>
 <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 
 <body>
