Added options to emoticon demo.

--- a/emoticons/index.html
+++ b/emoticons/index.html
@@ -9,6 +9,17 @@
 
 <div id="container">
 
+  <div id="options">
+    <input id="is-full-screen" type="checkbox" />
+    <label for="is-full-screen">Receive only</label>
+
+    <input id="is-audible" type="checkbox" />
+    <label for="is-audible">Audible range</label>
+
+    <input id="is-visualizer" type="checkbox" />
+    <label for="is-visualizer">Visualizer enabled</label>
+  </div>
+
   <!-- Received emoticon goes here -->
   <img id="received-emoticon" class="placeholder" src="img/placeholder.gif" />
 
