Modernized to latest Web Audio spec. Also, fixed some compilation errors.

--- a/emoticons/index.html
+++ b/emoticons/index.html
@@ -34,6 +34,5 @@
 
 </div>
 
-<script src="../lib/build/sonicnet.js"></script>
-<script src="main.js"></script>
+<script src="build/all.js"></script>
 </body>
