--- a/chat-pair/index.html
+++ b/chat-pair/index.html
@@ -30,7 +30,5 @@
   </footer>
 </div>
 
-<script src="../lib/build/sonicnet.js"></script>
-<script src="pair-client.js"></script>
-<script src="main.js"></script>
+<script src="build/all.js"></script>
 </body>
