--- a/chat/index.html
+++ b/chat/index.html
@@ -23,6 +23,5 @@
   </footer>
 </div>
 
-<script src="../lib/build/sonicnet.js"></script>
-<script src="main.js"></script>
+<script src="build/all.js"></script>
 </body>
